[workspace]
members = ["gen"]
exclude = ["fuzz"]

[package]
name = "lamy"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/lamy"
description = "A simple but correct yaml parsing library"
readme = "README.md"
documentation = "https://docs.rs/lamy"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
